--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-integration": "mocha --opts test/integration/mocha.opts test/integration/*.js",
-    "lint": "eslint **/*.js",
-    "lint:fix": "eslint **/*.js --fix"
+    "test-unit": "mocha --opts test/unit/mocha.opts test/unit/**/*.js",
+    "lint": "eslint . --quiet --ignore-path .gitignore",
+    "lint:fix": "eslint . --quiet --ignore-path .gitignore --fix",
+    "test-front": "karma start ./test/karma.config.js",
+    "gulp": "gulp"
   },
   "author": "balestrinc",
   "license": "ISC",
@@ -28,8 +31,27 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^3.0.2",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-inject": "^4.2.0",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-rev": "^7.1.2",
+    "gulp-uglify": "^2.0.1",
+    "gulp-usemin": "^0.3.28",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-spec-reporter": "0.0.26",
+    "main-bower-files": "^2.13.1",
     "mocha": "^3.2.0",
-    "supertest": "^3.0.0"
+    "mockdate": "^2.0.1",
+    "run-sequence": "^1.2.2",
+    "supertest": "^3.0.0",
+    "testdouble": "^2.1.2"
   },
   "homepage": "https://github.com/balestrinc/lunch-poll#readme"
 }
