--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.24.0",
     "babel-preset-es2015": "^6.24.0",
+    "body-parser": "^1.17.1",
     "express": "^4.14.0"
   },
   "devDependencies": {
@@ -33,7 +34,6 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.0.2",
-    "gulp-htmlmin": "^3.0.0",
     "gulp-inject": "^4.2.0",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-rev": "^7.1.2",
