--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --opts test/integration/mocha.opts test/**/*.js && mocha --opts test/unit/mocha.opts test/unit/**/*.js",
     "test-integration": "mocha --opts test/integration/mocha.opts test/integration/*.js",
     "test-unit": "mocha --opts test/unit/mocha.opts test/unit/**/*.js",
     "lint": "eslint . --quiet --ignore-path .gitignore",
